js/src/tests/test262/built-ins/Error/proto-from-ctor-realm.js
var
other
=
262
.
createRealm
(
)
.
global
;
var
C
=
new
other
.
Function
(
)
;
C
.
prototype
=
null
;
var
o
=
Reflect
.
construct
(
Error
[
]
C
)
;
assert
.
sameValue
(
Object
.
getPrototypeOf
(
o
)
other
.
Error
.
prototype
)
;
reportCompare
(
0
0
)
;
